lib/tests/fixtures/compiler/evaluation/inline_epp_bad_param_type.pp
inline_epp(@(TEMPLATE), { foo => bar })
  <%- | Integer $foo | -%>
  |- TEMPLATE
